--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/status-bar": "4.1.1",
+    "@ionic-native/file": "^5.36.0",
+    "@ionic-native/file-transfer": "^5.36.0",
     "@ionic/angular": "^6.1.9",
+    "cordova-plugin-file": "^7.0.0",
+    "cordova-plugin-file-transfer": "^1.7.1",
     "ionicons": "^6.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
