--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/file": "^5.36.0",
     "@ionic-native/file-transfer": "^5.36.0",
     "@ionic/angular": "^6.1.9",
+    "@ionic/storage-angular": "^3.0.6",
     "cordova-plugin-file": "^7.0.0",
     "cordova-plugin-file-transfer": "^1.7.1",
     "ionicons": "^6.0.3",
